--- a/package.json
+++ b/package.json
@@ -1,12 +1,8 @@
 {
-  "name": "mediainfo",
+  "name": "mediainfoq",
   "description": "Wrapper around the `mediainfo' program for obtaining metadata information about media files with the Q promise library",
   "version": "0.0.1",
-  "author": {
-    "name": "Sagar Ghuge",
-    "email": "ghugesss@gmail.com",
-    "url": "http://github.com/sagarghuge"
-  },
+  "author": "Sagar Ghuge <ghugesss@gmail.com> (http://github.com/sagarghuge)",
   "url": "http://github.com/sagarghuge/mediainfoq",
   "license": "MIT",
   "repository": {
@@ -40,5 +36,12 @@
   "dependencies": {
     "q": "^1.3.0",
     "xml2js": "^0.4.9"
+  },
+  "bugs": {
+    "url": "https://github.com/sagarghuge/mediainfoq/issues"
+  },
+  "homepage": "https://github.com/sagarghuge/mediainfoq",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
   }
 }
